--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,17 +1,17 @@
 cc_library(
-    name = "indirect_value",
-    hdrs = ["indirect_value.h"],
-    copts = ["-Iexternal/indirect_value/"],
+    name = "indirect",
+    hdrs = ["indirect.h"],
+    copts = ["-Iexternal/indirect/"],
 )
 
 cc_test(
-    name = "indirect_value_test",
+    name = "indirect_test",
     srcs = [
-        "indirect_value_test.cpp",
+        "indirect_test.cpp",
     ],
-    copts = ["-Iexternal/indirect_value/"],
+    copts = ["-Iexternal/indirect/"],
     deps = [
-        ":indirect_value",
+        ":indirect",
         "@catch2",
     ],
 )
@@ -23,10 +23,10 @@ cc_test(
         "pimpl.h",
         "pimpl_test.cpp",
     ],
-    copts = ["-Iexternal/indirect_value/"],
+    copts = ["-Iexternal/indirect/"],
     defines = ["CATCH_CONFIG_MAIN"],
     deps = [
-        ":indirect_value",
+        ":indirect",
         "@catch2",
     ],
 )
