--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,10 @@ if(NOT DEFINED PROJECT_NAME)
     set(CPP_INDIRECT_IS_SUBPROJECT ON)
 endif()
 
+# TODO(Avoid gloablly setting C++ standard) Force C++17 for Catchv2
+# Fix for: https://stackoverflow.com/questions/66227246/catch2-undefined-reference-to-catchstringmaker
+set(CMAKE_CXX_STANDARD 17)
+
 set(CPP_INDIRECT_VALUE_VERSION 0.0.1)
 
 project(indirect_value LANGUAGES CXX VERSION ${CPP_INDIRECT_VALUE_VERSION})
@@ -50,7 +54,7 @@ if (${CPP_INDIRECT_IS_SUBPROJECT})
         FetchContent_Declare(
             catch2
             GIT_REPOSITORY https://github.com/catchorg/Catch2.git
-            GIT_TAG v2.13.10
+            GIT_TAG v3.3.2
         )
 
         FetchContent_GetProperties(catch2)
@@ -71,7 +75,7 @@ if (${CPP_INDIRECT_IS_SUBPROJECT})
         target_link_libraries(indirect_value_test
             PRIVATE
                 indirect_value::indirect_value
-                Catch2::Catch2
+                Catch2::Catch2WithMain
         )
 
         target_compile_options(indirect_value_test
