--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ if(NOT DEFINED PROJECT_NAME)
     set(CPP_INDIRECT_IS_NOT_SUBPROJECT ON)
 endif()
 
-set(CPP_INDIRECT_VALUE_VERSION 1.0.0)
+set(CPP_INDIRECT_VERSION 1.0.0)
 
 project(indirect LANGUAGES CXX VERSION ${CPP_INDIRECT_VERSION})
 
